--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    tu blog de cabecera
+                    tu blog de cabecera dylan
                 </span>
             </div>
             <div id="post">
