--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog VOLVIMOS
+                Hyperblog VOLVIMOS 2
                 <span id="tagline">
                     tu blog de cabecera dylan
                 </span>
