--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png"/>
                 Hyperblog VOLVIMOS 2
                 <span id="tagline">
                     tu blog de cabecera dylan
