--- a/blogpost.html
+++ b/blogpost.html
@@ -15,9 +15,9 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                 <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&aacute;bles que se pueden hacer con ramas</p>
-                 <p>los blogs son la mejor forma de compartir informacion y tus ideas.
-                    mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar .pero esteticamente no lo eres... 
+                 <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                 <p>los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
+                    mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar .pero estet&iacute;camente no lo eres... 
                     por ahora.
                  </p>
                  <p>suscribete y dale like</p>
