cambio de titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png"/>
-                Hyperblog VOLVIMOS 2
+                Hyperblog VOLVIMOS 2 es un blog del futuro
                 <span id="tagline">
                     tu blog de cabecera dylan
                 </span>
