--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                  <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                 <p><img src="imagenes/equipo.jpg" alt="" width="100%"></p>
+                 <p><img src="https://i.postimg.cc/BZN7FSw0/equipo-f86c6b2b-aa83-49c1-859c-e9bb2b9b6d58.webp" alt="" width="100%"></p>
                  <p>los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
                     mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar .pero estet&iacute;camente no lo eres... 
                     por ahora.
